cambie nuevamente el h1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <head> <!--Acá pueden ir botones, logos e imágenes. No debe tener un h1 dentro.-->
     </head>
-    <h1>Lorena Martinez</h1>
+    <h1>MI BIO</h1>
     
     <div>
         <h2>Quién soy</h2>
